sources: update 2021-07-18 sytle: fix memos/ icon and aligns

--- a/sources/src/modules/css/mvp.css
+++ b/sources/src/modules/css/mvp.css
@@ -10,7 +10,7 @@ html {
   --color: #118bee;
   --color-accent: #118bee15;
   --color-bg: #f9f9f9;
-  --color-bg-secondary: #eaeaea;
+  --color-bg-secondary: #e6e6e6;
   --color-secondary: #920de9;
   --color-secondary-accent: #920de90b;
   --color-shadow: #f4f4f4;
